changed profile img, updated text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
     <title>Evrim Coskun's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -36,11 +36,10 @@
       <img src="img/ec_portrait.jpg" class="profile__portrait" alt="Evrim's Portrait">
       <h1>Hello World!</h1>
       <p>
-        My name is Evrim Coskun. I am a <span>web</span> developer from Turkey.
+        My name is Evrim Coskun. I am a web developer from Istanbul currently located in Germany.
       </p>
-      <a href="https://github.com/" target="_blank">Check out some of my code</a>
-      <button type="button">Primary Button</button>
-      <button class="button__secondary">Secondary Button</button>
+      <a href="https://github.com/evrimcoskun" target="_blank" class="button">Check out some of my code</a>
+      <a href="./about.html" class="button button__secondary">Find out more about me</a>
     </div>
     <footer class="page-footer">
       <p>Find me on</p>
