--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
     <title>Evrim Coskun's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -48,7 +48,7 @@
             <label class="standart-label" for="contact-message">Message* (max. 240 ch): </label><br>
             <textarea maxlength="240" id="contact-message" required></textarea>
           </div>
-          <input type="submit" value="Send message">
+          <input type="submit" class="button" value="Send message">
         </form>
       </div>
       <div>
